# ist-opengl

./: CMakeLists.txt  README.TXT  app.cpp  build.sh  run.sh  starting-opengl.cpp  test.sh  vec.sh
glfw-3.2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.2.1/examples/: Makefile  cmake_install.cmake
glfw-3.2.1/examples/boing.app/Contents/MacOS/: boing
glfw-3.2.1/examples/gears.app/Contents/MacOS/: gears
glfw-3.2.1/examples/heightmap.app/Contents/MacOS/: heightmap
glfw-3.2.1/examples/particles.app/Contents/MacOS/: particles
glfw-3.2.1/examples/simple.app/Contents/MacOS/: simple
glfw-3.2.1/examples/splitview.app/Contents/MacOS/: splitview
glfw-3.2.1/examples/wave.app/Contents/MacOS/: wave
glfw-3.2.1/src/: Makefile  cmake_install.cmake
glfw-3.2.1/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen
glfw-3.2.1/tests/empty.app/Contents/MacOS/: empty
glfw-3.2.1/tests/icon.app/Contents/MacOS/: icon
glfw-3.2.1/tests/sharing.app/Contents/MacOS/: sharing
glfw-3.2.1/tests/tearing.app/Contents/MacOS/: tearing
glfw-3.2.1/tests/threads.app/Contents/MacOS/: threads
glfw-3.2.1/tests/timeout.app/Contents/MacOS/: timeout
glfw-3.2.1/tests/title.app/Contents/MacOS/: title
glfw-3.2.1/tests/windows.app/Contents/MacOS/: windows
libs/cgj-math/: CMakeLists.txt
libs/cgj-math/include/cgj-math/: mat.hpp  vec.hpp
libs/cgj-math/src/: mat.cpp  vec.cpp
objects/: square.json
shaders/: simpleFragment.shader  simpleVertex.shader
src/: app.cpp  draw.cpp  draw.hpp  shader.cpp  shader.hpp  thing.cpp  thing.hpp  window.cpp  window.hpp
test/: tests.cpp
unit-tests/: main-tests.cpp
